--- a/style.css
+++ b/style.css
@@ -372,6 +372,49 @@ button:focus {
     z-index: 1;
 }
 
+.video-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+    }
+    .video-container {
+        position: relative;
+        background: #fff;
+        padding: 20px;
+    }
+    .video-modal iframe {
+        max-width: 100%;
+    }
+    /* Ícone de Play */
+    .play-button {
+        background: transparent;
+        border: none;
+        font-size: 30px;
+        color: white;
+        cursor: pointer;
+        transition: transform 0.3s;
+    }
+    .play-button:hover {
+        transform: scale(1.1);
+    }
+    /* Fechar botão */
+    .close-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: transparent;
+        border: none;
+        font-size: 25px;
+        color: #333;
+        cursor: pointer;
+    }
 
 .slider-bg:after {
     content: '';
