--- a/style.css
+++ b/style.css
@@ -363,6 +363,128 @@ button:focus {
     }
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  .hero-content h2 {
+    text-align: right;
+    padding-right: 60px;
+    padding-left: 20px;
+    font-size: 26px;
+    line-height: 1.4;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 1024px) {
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
+  .hero-content h2 {
+    font-size: 26px;
+    line-height: 1.4;
+    padding: 0 30px; /* Ajusta o padding à esquerda e direita */
+    padding-left: 205px; /* Espaço à esquerda */
+    text-align: center;  /* Alinha o texto à direita */
+    word-wrap: break-word; /* Quebra o texto longo para evitar que saia da borda */
+    max-width:100%;  /* Limita o tamanho do texto para 90% da largura */
+    margin: 0; /* Remove margens desnecessárias */
+  }
+
+  .hero-aria {
+    position: relative;
+    overflow: hidden;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .hero-content {
+    display: flex;
+    justify-content: flex-end; /* Alinha o conteúdo à direita */
+    align-items: center;
+    height: 100vh;
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+    width: 100%;
+  }
+
+  .container {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .hero-area-slids {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+  }
+
+  .slider-bg {
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+  }
+
+  /* Ajustes para a logo da navbar */
+  .navbar-brand h1 {
+    font-size: 24px;
+  }
+
+  .navbar .nav-link {
+    font-size: 16px;
+    padding: 8px 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
+  .hero-aria {
+    position: relative;
+    overflow: hidden;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .hero-content {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .container {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .hero-area-slids {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+  }
+
+  .slider-bg {
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .hero-content h2 {
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+    font-size: 20px;
+    z-index: 3;
+    position: relative;
+  }
+}
+
 .slider-bg {
     height: 100%;
     width: 100%;
